--- a/GameServer/nlog.config
+++ b/GameServer/nlog.config
@@ -1,33 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xsi:schemaLocation="NLog NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="info"
-      internalLogFile="c:\temp\internal-nlog.txt">
+      internalLogFile="c:\temp\console-example-internal.log"
+      internalLogLevel="Info" >
 
-  <!-- enable asp.net core layout renderers -->
-  <extensions>
-    <add assembly="NLog.Web.AspNetCore"/>
-  </extensions>
 
-  <!-- the targets to write to -->
   <targets>
-    <!-- write logs to file  -->
-    <target xsi:type="File" name="allfile" fileName="c:\temp\nlog-all-${shortdate}.log"
-            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
+    <!-- write logs to file -->
+    <target xsi:type="File" name="target1" fileName="logs\server.log"
+            layout="${date}|${level:uppercase=true}|${message} ${exception}|${logger}|${all-event-properties}" />
+    <target xsi:type="Console" name="target2"
+            layout="${message} ${exception}|${logger}|${all-event-properties}" />
 
-    <!-- another file log, only own logs. Uses some ASP.NET core renderers -->
-    <target xsi:type="File" name="ownFile-web" fileName="c:\temp\nlog-own-${shortdate}.log"
-            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
+
   </targets>
 
   <!-- rules to map from logger name to target -->
   <rules>
-    <!--All logs, including from Microsoft-->
-    <logger name="*" minlevel="Trace" writeTo="allfile" />
+    <logger name="*" minlevel="Trace" writeTo="target1,target2" />
 
-    <!--Skip non-critical Microsoft logs and so log only own logs-->
-    <logger name="Microsoft.*" maxLevel="Info" final="true" /> <!-- BlackHole without writeTo -->
-    <logger name="*" minlevel="Trace" writeTo="ownFile-web" />
   </rules>
 </nlog>
