Changed logging folder

--- a/GameServer/nlog.config
+++ b/GameServer/nlog.config
@@ -8,7 +8,7 @@
 
   <targets>
     <!-- write logs to file -->
-    <target xsi:type="File" name="target1" fileName="logs\server.log"
+    <target xsi:type="File" name="target1" fileName="logs/server.log"
             layout="${date}|${level:uppercase=true}|${message} ${exception}|${logger}|${all-event-properties}" />
     <target xsi:type="Console" name="target2"
             layout="${message} ${exception}|${logger}|${all-event-properties}" />
