--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.5.2" />
   </ItemGroup>
 
