Move communication to SignalR (#11)
* IMPL

* POC implementation

* Remove redundant project

* Implement Connection and configuration exchange

* Corrected naming and added delay to startup

* Implement client state update

* clarify framework dependency

* Corect interval initialization

* Add comunication for server side update

* Add initial mapstate to connection initialization

* Correct game state update

* Refactor

* Remove state controller

* Remove dev log

* Refactor

* Refactor 2

* Renames

--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -1,31 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="wwwroot\**" />
-    <Content Remove="wwwroot\**" />
-    <EmbeddedResource Remove="wwwroot\**" />
-    <None Remove="wwwroot\**" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Content Remove="nlog.config" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="nlog.config">
-      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </EmbeddedResource>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.5.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\packages\p5js\" />
   </ItemGroup>
 
 </Project>
