--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -7,11 +7,12 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.0" />
+    <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="1.0.163" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.5.2" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\packages\p5js\" />
+    <Folder Include="wwwroot\packages\" />
   </ItemGroup>
 
 </Project>
